k8s/prep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: the-intelligent-investor-backend-prep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: the-intelligent-investor-backend-prep
  template:
    metadata:
      labels:
        app: the-intelligent-investor-backend-prep
    spec:
      containers:
        - name: the-intelligent-investor-backend
          image: quay.io/roni-tamari/the-intelligent-investor-backend:prep
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: the-intelligent-investor-backend-prep
spec:
  selector:
    app: the-intelligent-investor-backend-prep
  ports:
    - name: http
      port: 4000
      targetPort: 4000
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: the-intelligent-investor-backend-prep
spec:
  to:
    kind: Service
    name: the-intelligent-investor-backend-prep
  port:
    targetPort: http
  tls:
    termination: edge
