k8s/prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: the-intelligent-investor-backend-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: the-intelligent-investor-backend-prod
  template:
    metadata:
      labels:
        app: the-intelligent-investor-backend-prod
    spec:
      containers:
        - name: the-intelligent-investor-backend
          image: quay.io/YOUR_QUAY_USERNAME/the-intelligent-investor-backend:prod
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: the-intelligent-investor-backend-prod
spec:
  selector:
    app: the-intelligent-investor-backend-prod
  ports:
    - name: http
      port: 4000
      targetPort: 4000
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: the-intelligent-investor-backend-prod
spec:
  to:
    kind: Service
    name: the-intelligent-investor-backend-prod
  port:
    targetPort: http
  tls:
    termination: edge
